fixed the mistake(OCD problems)

--- a/Positions.ipynb
+++ b/Positions.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3113e86d",
    "metadata": {},
    "outputs": [
@@ -1424,8 +1424,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('today.csv')\n",
-    "data.head()"
+    "data = pd.read_csv('today.csv')"
    ]
   },
   {
@@ -1446,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7d616803",
    "metadata": {},
    "outputs": [
@@ -2842,8 +2841,7 @@
     "cols = ['Date', 'Shipment Month', 'Terminal Month', 'M2M Terminal Month']\n",
     "for i in cols:\n",
     "    formatted_dates = pd.to_datetime(data[i], format='mixed', errors='coerce')\n",
-    "    data[i] = formatted_dates\n",
-    "data.head()"
+    "    data[i] = formatted_dates"
    ]
   },
   {
